Actualizacion 24/10/25